--- a/demo/package.json
+++ b/demo/package.json
@@ -7,13 +7,11 @@
     "id": "org.nativescript.demo",
     "tns-android": {
       "version": "2.3.0"
-    },
-    "tns-ios": {
-      "version": "2.3.0"
     }
   },
   "dependencies": {
     "nativescript-invengo": "file:..",
+    "nativescript-sqlite": "^1.1.2",
     "tns-core-modules": "2.3.0"
   },
   "devDependencies": {
