--- a/demo/app/App_Resources/Android/AndroidManifest.xml
+++ b/demo/app/App_Resources/Android/AndroidManifest.xml
@@ -27,6 +27,7 @@
 
 		<activity
 			android:name="com.tns.NativeScriptActivity"
+			android:screenOrientation="portrait"
 			android:label="@string/title_activity_kimera"
 			android:configChanges="keyboardHidden|orientation|screenSize">
 			<!-- android:theme="@style/LaunchScreenTheme" -->
